--- a/go/toolchain/BUILD.bazel
+++ b/go/toolchain/BUILD.bazel
@@ -14,6 +14,11 @@ string_flag(
     build_setting_default = "",
 )
 
+string_flag(
+    name = "sdk_name",
+    build_setting_default = "",
+)
+
 filegroup(
     name = "all_rules",
     srcs = glob(["*.bzl"]),
